--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     </style>
 </head>
 <body>
-    <h2>Random Manito Generator</h2>
-    <p>.</p>
-    <p>이름과 코드가 일치하지 않으면 랜덤한 결과가 나옵니다.</p>
+    <h2>Random Manito Generator V1</h2>
+    <p>이름과 코드가 일치하지 않으면 무작위 결과가 나옵니다.</p>
     <label for="name">Name:</label>
     <input type="text" id="name" placeholder="Enter your name">
 
