--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <h2 class="mt-4">Random Manito Generator V1</h2>
-        <p>이름과 코드가 일치하지 않으면 무작위 결과가 나옵니다.</p>
+        <p>이름과 코드가 일치해야 마니또를 확인할 수 있음!!!</p>
 
         <form>
             <div class="form-group">
