--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         #result {
             margin-top: 20px;
         }
+
+        #codeList {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +50,18 @@
         </form>
 
         <div id="result" class="mt-4"></div>
+
+        <div id="codeList" class="mt-4">
+            <ul class="list-group">
+                <li class="list-group-item"><h4>테스트 용 코드</h4></li>
+                <li class="list-group-item">지성 &amp; 경수 : 51</li>
+                <li class="list-group-item">덕용 &amp; 영현 : 7</li>
+                <li class="list-group-item">재찬 &amp; 나연 : 106</li>
+                <li class="list-group-item">재윤 &amp; 이슬 : 126</li>
+                <li class="list-group-item">미정 &amp; 준철 : 89</li>
+                <li class="list-group-item">민석 &amp; 민승 : 117</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
