--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="mt-4">Random Manito Generator V1</h2>
+        <h2 class="mt-4">Random Manito Generator V1.1</h2>
         <p>이름과 코드가 일치해야 마니또를 확인할 수 있음!!!</p>
 
         <form>
@@ -51,7 +51,7 @@
 
         <div id="result" class="mt-4"></div>
 
-        <div id="codeList" class="mt-4">
+<!--         <div id="codeList" class="mt-4">
             <ul class="list-group">
                 <li class="list-group-item"><h4>테스트 용 코드</h4></li>
                 <li class="list-group-item">덕용 &amp; 영현 : 7656</li>
@@ -60,7 +60,7 @@
                 <li class="list-group-item">미정 &amp; 준철 : 3076</li>
                 <li class="list-group-item">민석 &amp; 민승 : 1133</li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
